src/test/deca/syntax/valid/asm_method3.deca
//Description
//    Vérifier la decl d'asm method
//
//Résultats :
//   Ok
//

class A{
  void test() asm ("WNL");
}
