src/test/deca/syntax/invalid/meth_name_used3.deca
//Description
//    Vérifier que le nom de la method n'entre pas en conflit
//
//Résultats :
//   Ok
//

class A{
 void readInt(){}
}

{}
